--- a/css/criarExame.css
+++ b/css/criarExame.css
@@ -83,6 +83,39 @@
     color: aliceblue;
 }
 
+.criar-exame .area form .info-ocorrencia{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--cor-azul-turquesa-60);
+}
+
+.criar-exame .area form .info-ocorrencia .inputs-area{
+    padding: 20px 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.criar-exame .area form .info-ocorrencia .inputs-area p,
+.criar-exame .area form .info-ocorrencia .inputs-area label{
+    text-align: center;
+    font-weight: bold;
+    color: aliceblue;
+    font-size: 18px;
+}
+
+.criar-exame .area form .info-ocorrencia .inputs-area input,
+.criar-exame .area form .info-ocorrencia .inputs-area .drop-upload-boletimOcorrencia{
+    width: 70%;
+}
+
+.criar-exame .area form .info-ocorrencia .inputs-area .drop-upload-boletimOcorrencia{
+    height: 38px;
+    background-color: white;
+}
+
 .criar-exame .area form .div-textarea {
     width: 100%;
     margin: 20px 0;
